# revitalize-permits-scraper

./: .gitignore  pyproject.toml  test.py
permits_post_processing/: __init__.py  base.py  cli.py  models.py  registry.py
permits_post_processing/processors/: __init__.py
permits_post_processing/processors/tx/: __init__.py
permits_post_processing/processors/tx/arlington/: __init__.py  processor.py
permits_post_processing/processors/tx/austin/: __init__.py  post_processor.py
permits_post_processing/processors/tx/el_paso/: post_processor.py
permits_scraper/: __init__.py  main.py  run.py
permits_scraper/api/: app.py
permits_scraper/configs/: settings.py
permits_scraper/schemas/: __init__.py  contacts.py  permit_range_log.py  permit_record.py  search.py
permits_scraper/schemas/regions/tx/arlington/: __init__.py  associated_person.py  sub_contractor.py
permits_scraper/scrapers/: base.py  playwright_scraper.py
permits_scraper/scrapers/base/: permit_details.py  permit_list.py  playwright.py  playwright_permit_details.py  playwright_permit_list.py
permits_scraper/scrapers/regions/tx/arlington/: __init__.py  permit_details.py  permits_list.py
permits_scraper/scrapers/regions/tx/austin/: __init__.py  permit_details.py  permits_list.py
permits_scraper/tests/: test_agent.py  test_tools.py
permits_scraper/ui/: details_runner.py  list_runner.py  menu.py  registry.py  utils.py
tests/: test_el_paso_permit_details.py  test_el_paso_post_processing.py
tests/src/test_el_paso_post_processing/case_1/: expected.csv  inputs.csv
(+4 files in other folders)
