[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

known_pandas = "pandas,numpy"
sections = "FUTURE,STDLIB,THIRDPARTY,PANDAS,FIRSTPARTY,LOCALFOLDER"

import_heading_stdlib = "Standart library imports"
import_heading_thirdparty = "Thirdparty imports"
import_heading_firstparty = "Local imports"
import_heading_localfolder = "Local folder imports"

[tool.poetry]
name = "permits_scraper"
readme = "README.md"
version = "0.1.0"
description = "USA Construction Permits Scraper"
authors = [
    "Propsi4 <gaenday328@gmail.com>"
]
packages = [
    { include = "permits_scraper" }
]

[tool.poetry.dependencies]
python = ">=3.11.11,<3.12"
pydantic = "^2.11.9"
pydantic-settings = "^2.10.1"
dotenv = "^0.9.9"
pandas = "^2.3.2"
playwright = "^1.55.0"
fastapi = "^0.117.1"
uvicorn = "^0.37.0"
beautifulsoup4 = "^4.13.5"
tqdm = "^4.67.1"
langchain-openai = "^0.3.33"
pyarrow = "^21.0.0"
fastparquet = "^2024.11.0"


[tool.poetry.group.dev.dependencies]
black = "^25.9.0"
flake8 = "^7.1.1"
flake8-docstrings = "^1.7.0"
mypy = "^1.13.0"
poetry = "^2.1.3"
pre-commit = "^4.0.1"
ipykernel = "^6.29.5"
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "permits_scraper.ui.menu:main"